apply plugin: 'java'

java{
    sourceCompatibility = 17
    targetCompatibility = 17
}

sourceSets{
    main{
        java.srcDirs = ['src']
        resources.srcDirs = ['assets']
    }
}

dependencies{
    implementation "com.squareup:javapoet:$javapoetVersion"
    implementation "Anuken:Mindustry:$mindustryVersion"
}

tasks.withType(JavaCompile).configureEach{
    options.encoding = 'UTF-8'
    options.compilerArgs += [
        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
    ]
}